k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-prod
  labels:
    istio-injection: enabled
