k8s/overlays/production/mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: blog
    tier: backend
$patch: delete
