k8s/overlays/production/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: blog
    tier: backend
spec:
  type: ExternalName
  externalName: 172.21.48.3
