k8s/overlays/production/nginx-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"ports": {"80":"ingress-backendconfig"}}'
spec:
  type: NodePort
  selector:
    app: blog
    tier: frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
