k8s/overlays/production/nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  selector:
    app: blog
    tier: frontend
  loadBalancerSourceRanges:
  - 0.0.0.0/0
