k8s/overlays/production/app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-np
spec:
  podSelector:
    matchLabels:
      app: blog
      tier: middle
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: blog
          tier: frontend
