k8s/overlays/production/nginx-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-np
spec:
  podSelector:
    matchLabels:
      app: blog
      tier: frontend
  ingress:
  - from: []
